--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </div>
 
                             <div class="item">
-                                <img src="chicago.jpeg" alt="Chicago">
+                                <img src="Chicago.jpeg" alt="Chicago">
                             </div>
 
                             <div class="item">
